Fix (Login, Signup, password visibility)

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,4 +1,5 @@
 .l-page {
+    width: 100%;
     height: 90vh;
     justify-content: center;
     align-items: center;
@@ -8,6 +9,7 @@
 .l-container {
     width: 25%;
     height: 60vh;
+    max-height: 35rem;
     justify-content: space-around;
     align-items: center;
     padding: 2.25rem;
