--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -1,4 +1,5 @@
 .s-page {
+    width: 100%;
     height: 90vh;
     justify-content: center;
     align-items: center;
